--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -17,15 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
-   "source": [
-    "Df=pd.read_excel(os.getcwd() + '\\\\raw_data\\\\ANOTACIONES_VIDEO_PUBLICO.xlsx')\n",
-    "subj_idx = Df.columns[1:]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -47,6 +44,14 @@
    ],
    "source": [
     "frames=[]\n",
+    "\n",
+    "Trucos=['Truco 1', 'Truco 2', 'Truco 1', 'Truco 1', 'Truco 1', 'Truco 1', 'Truco 1', ]\n",
+    "\n",
+    "\n",
+    "Df=pd.read_excel(os.getcwd() + '\\\\raw_data\\\\ANOTACIONES_VIDEO_PUBLICO.xlsx', sheet_name='Truco 1')\n",
+    "subj_idx = Df.columns[1:]\n",
+    "\n",
+    "\n",
     "for s in subj_idx:\n",
     "    df_x = Df[['Tiempo', s]]\n",
     "    df_x.columns=['time', 'lables']\n",
