--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -60,11 +60,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'Se', 'B', 'In', 'L', 'I, S', 'S', 'S,A', 'I', 'PERD.VIS',\n",
+       "       'AA', 'R', 'P', 'C', 'D,R', 'Si, R', 'A,S', 'M', 'F', 'D,A', 'C,M',\n",
+       "       'S,B', 'F,B', 'A,C', 'C,F,M', 'A,F,D', 'A', 'S,P', 'P,R', 'R,P',\n",
+       "       'In, F', 'D', 'A+', 'F,A+', 'O', 'S, A', 'L,S', 'S,L', 'PERD. VIS',\n",
+       "       'Se,S', 'A0', 'C,S', 'S, A+', 'R,P ', 'P,S', 'I,R', 'P, R', 'P,I',\n",
+       "       'A,P', 'A+,P', 'L, P', 'C,F', 'iN', 'R, L ', 'S,C', 'A0, S',\n",
+       "       'A0,S', 'Si', ' Si', 'B,Se', 'PV', 'S,A+', 'PV,A', 'L,B', 'N',\n",
+       "       'L,N', 'S,N', 'a', 'R,a', 'R,L', 'perd.vis', ' C', 'R,A', 'R,D',\n",
+       "       'R,Si', 'S,D', 'S,I', 'I,S', 'F,S', 'F,Se', 'S,A,I', 'Si, C',\n",
+       "       'R, Si', 'Se, S', 'R, D', 'Si, B', 'A, S', 'A+, S', 'S, Se', 'F,I',\n",
+       "       'F,A,S', 'D, S', 'L, S', 'In, A, D', 'A, Se', 'B, Si', 'Se, VP',\n",
+       "       'VP', 'F, I', ' B', 'F, S, A', 'S, F, A', 'B, S', 'F, I, S',\n",
+       "       'S, A, I, F', 'F, ', 'B,F', 'D,S,A', 'D,S', 'B,S,A', 'A,PV',\n",
+       "       'Se, PV', 'C,B', 'Si, PV', 'C,L', 'A, PV', 'I,PV', 'L, PV', 'C,PV',\n",
+       "       'S, D', 'S, L', 'C, F', 'C, S', 'S, B, Se', 'A,L', 'S,a', 'D,C',\n",
+       "       'O,Se', 'A,S,D', 'H', 'S,PV', 'Si,PV', 'L,PV', 'Si,H', 'I,S,A',\n",
+       "       'H,B', 'H,B,L', 'DD,R', 'L,R', 'H,C', 'H,S', 'H,In', 'H,L', 'H,R',\n",
+       "       'Si,M', 'M,B', 'F,Se,A', 'M,L', 'M,I', 'M,F', 'M,S', 'A,I', 'Si,B',\n",
+       "       'R,PV', 'a,S', 'Se,a', 'S,F', 'N,L', 'N,S', 'F,Se,D', 'S,M',\n",
+       "       'D,Si', 0, 'C,I', 'S,L,PV', 'Si,N', 'S,Se', 'C,A', 'F,C', 'Si,C',\n",
+       "       'I,L', 'S,I,L', 'F,PV', 'B,L', 'B,S', 'B,R', 'Si,S', 'C, AA,S',\n",
+       "       'R, A', 'Si, D', 'C, F, A', 'R, C', 'F, C, A', 'T', 'R,C', 'O,T,A',\n",
+       "       'R,N', 'P,D,R', 'R,A+', 'C,T', 'S, a', 'N, B', 'S, N, B', 'F, A',\n",
+       "       'N, S', 'N, F', 'N, B, C', 'F, a', 'S, A, O', 'S, B, N', 'A+,S',\n",
+       "       'S,AA', 'S,In', 'AA,C,S', 'A+,S,C', 'S, AA', 'S, P', 'C, S, a',\n",
+       "       'C, S, P', 'S, A, P', 'R, P', 'S, C, P', 'R, A, C, P', 'R, A, P',\n",
+       "       'S, P, A', 'P, S, a', 'C,S,P', 'A,F,C', 'S,C,AA', 'C, P', 'a, S',\n",
+       "       'B, F', 'S, N', 'S, B', 'F, S, A, P', 'D, Si', 'B,P', 'S,P,I',\n",
+       "       'C,P', 'C,F,P', 'AA+', 'R, AA', 'Si, P', 'Si, A+', 'P, R, A+',\n",
+       "       'N, R', 'F, S', 'S, D, A', 'D, F', 'A,B', 'R,AA', 'R,T', 'L,S,T',\n",
+       "       'S,Si', 'S,A,D', 'R,O', 'R,A,D', 'L, Se', 'Si, L', 'F, Si',\n",
+       "       'In, S', 'Se, I, A, S', 'Si, S', 'Se, I, S', 'S, D, a', 'AA,D',\n",
+       "       'A,D', 'N,D', 'S,D,AA', 'F,C,S', 'S,A,C', 'C,F,S,A', 'A,D,F',\n",
+       "       'C,S,A', 'A,I,F', 'A,F', 'N,B', 'L,N,B', 'S,Si,A,C', 'S,N,B',\n",
+       "       'R,Si, a', 'S,A,Si', 'B,N', 'AA,S', 'R,N,C', 'C,N', 'A,O', 'Si,R',\n",
+       "       'Se,R', 'S,A,F,I', 'F,A,C', 'R,A,I', 'A,S,I', 'R,F', 'Si,F', 'R,B',\n",
+       "       'Se,F', 'N,F', 'F,I,A', 'F,C,I,A', 'S, F', 'N,S,B', 'SN,S', 'N,In',\n",
+       "       'N,Si', 'A,D,R', 'A, I,F', 'N,B,C', 'N,B,I', 'B,I', 'F,A', 'S,O',\n",
+       "       'I,F', 'B,C', 'I,S,a', 'B,N,I', 'B,D', 'B,N,L', 'Se,O', 'A,se',\n",
+       "       'B,N,In', 'D,O', 'R,Se', 'I,O', 'Si,N,S', 'N,C', 'N,S,C', 'S,C,N',\n",
+       "       'R,L,N', 'N,R,D', 'N,R', 'C,N,F', 'F,AA', 'A,S,Si', 'O,S', 'C,R',\n",
+       "       'In,PV', 'O,PV', 'F,a', 'C,S,N', 'S,Si,A', 'L,F', 'C,Si', 'I,R,B',\n",
+       "       'In,F ', 'In, B', 'N,O', 'N,S ', 'F,In', 'N,S,P', 'N,P', 'F,P',\n",
+       "       'O,P', 'IN,S', 'I,P', 'D,R,Si', 'R,C,P', 'S,N,In', 'In,S', 'B,PV ',\n",
+       "       'D,A,S', 'I,A', 'SS,N', 'R,I', 'F,I,C,A', 'D,A,R', 'A,R', 'In,N',\n",
+       "       'N,I', 'O,N', 'Se,C', 'N,S,L', 'D,N', 'N,C,S', 'N,L,R', 'N,L,S',\n",
+       "       'S,a,Se', ' ', 'D, R', 'S, O', 'N, P', 'F, D', 'D, A, S', 'S, I',\n",
+       "       'I, R', 'A, S, C', 'S, C, A', 'I, A', 'L, I', 'O, S', 'S, A+, F',\n",
+       "       'S, A, C', 'N, L', 'S, C', 'F, C', 'L, C', 'Si, N', 'Si, S, A',\n",
+       "       'C, N', 'S, A, I', 'F, L', 'C, A', 'F, Si, A', 'R, I', 'S, A, D',\n",
+       "       'A, D', 'A, I', 'N, I', 'N, C', 'C, S, A', 'C, F, S', 'C, A, S',\n",
+       "       'B, L', 'Se, A', 'R, L', 'R, Se', 'F  ', 'S ', 'L ', 'R, Si, N',\n",
+       "       'S, Se, A', 'D, S, A', 'F, Se, A', 'B, R', 'S, I ', 'D, L', 'L, R',\n",
+       "       'S, C, L', 'C, S, L', 'C, L', 'C, L, S', 'F, A, D', 'N, S, L',\n",
+       "       'N, L, S', 'N, L,S ', 'Se, I', 'M, N', 'M, F, S', 'M, C', 'M, F',\n",
+       "       'M, C, S', 'M, R', 'M  ', 'S, L, S', 'Se, L', 'F, A, S', 'L, S   ',\n",
+       "       'C, Se', 'Si, A, S', 'Se, S, A', 'N  ', 'S,P,N', 'C,A,F', 'D,S,A+',\n",
+       "       'S,C,I', 'F,S,A', 'D,F,A', 'S,C,D', 'A+,Se,S', 'F,N', 'D,R,A',\n",
+       "       'R,Se,D', 'F,A0', 'Se,a,S', 'A,Si,S', 'Se,A', 'A,I,C', 'S,Se,I.A',\n",
+       "       'F,Si', 'S,I,A', 'R,C,A', 'I,Si', 'sI', 'N,D,C', 'D,a', 'I,a',\n",
+       "       'D,F', 'S,A,L', 'IN, PV', 'N,a', 'A,Se', 'Si,A', 'AA,Se', 'I,N',\n",
+       "       'S,a?', 'a,I', 'N. S', 'O, A', 'I, Si, S', 'R, A, I', 'C, R',\n",
+       "       'A, C', 'D, A', 'F, C, S', 'N ', 'Se, F ', 'S, In', 'A, F',\n",
+       "       'a, S, C', 'L, Si', 'L, F', 'L, F, S', 'VP ', 'S, L   ',\n",
+       "       'C, S, A+', 'S  ', 'S, L, A', 'R, a', 'R, N', 'S,A, L', 'L, S, A',\n",
+       "       'S, Si', 'N, Si', 'B, C', 'N, O', 'I, F', 'S, C, a',\n",
+       "       'C, F, A (ANTES)', 'TONTO BOCA P', 'B, S, C', 'Si, L, S',\n",
+       "       'In, I, F', 'C, a', 'M, F, C', 'M, S', 'O, P', 'R, Se, A',\n",
+       "       'M, S, O', 'M, O', 'M, N, S', 'M, N, F', 'M, N, O', 'F, Se',\n",
+       "       'A, D, S', 'F, C, AA', 'L, A', 'Si, S, L', 'Se, A, S', 'S, Se, AA',\n",
+       "       'S, L, a', 'Se, C, S', 'R, O', 'L  ', 'R, C, A', 'A, L', 'S, L, N',\n",
+       "       '  ', 'O, L', 'C, D', 'D, AA', 'R, A0', 'R, D, A', 'F, R', 'I, C',\n",
+       "       'N, F, S', 'B, I', 'N, In', 'A, C, I', 'a, B', 'B, F, S',\n",
+       "       'B, L, S', 'N, S ', 'N, C, S', 'N, L, C', 'R, A, C', 'I, N',\n",
+       "       'F, B', 'F, I, A', 'N, F, C', 'R, F', 'L, S, a', 'C ', 'F ',\n",
+       "       'N, F, I', 'I, S, A', 'B, a, D', 'N, F, D', 'F, D, a', 'C, I', 'X',\n",
+       "       'L, O', 'N, S, I', 'D, C', 'Si, S ', 'C, Si', 'Se, F, A',\n",
+       "       'D, F, O', 'B, D, F', 'L, B', 'F, S, D', 'L, C, S', 'N, S, C',\n",
+       "       'S, A, L', 'N, S, D', 'N, C ', 'N,  L', 'N, R ', 'A, F, D',\n",
+       "       'N, R, I', 'A, S, I', 'S, A ', 'S,AA,P', 'AA,P', 'M,AA', 'C,A+',\n",
+       "       'AA,I', 'A,I,S', 'DD,S', 'Se,S,AA', 'IN', 'Se,A+', 'Se,N',\n",
+       "       'Se,A+,S', 'M,A,S', 'I,N,F', 'Si,D', 'C,D', 'S,D,N', 'L?D', 'M,C',\n",
+       "       'M,R', 'R,a,F', 'F,C,R', 'Se,A+,M', 'A+.S', 'A+,O', 'S,Si,P',\n",
+       "       'L,O', 'AA+,S', 'O,C', 'AA,O', 'Si,L', 'AA+,S,C', 'L,Si', 'S,C,A',\n",
+       "       'AA,R', 'Si,N,C', 'a,O', 'R,N,D', 'B,A+', 'AA+,S,D', 'S,A,Se',\n",
+       "       'F?', 'L,N,R', 'R,Se,A', 'PV,R', 'R,AA+', 'Se,I', 'L,A', 'A,D,S',\n",
+       "       'Si,', 'N,R,Si', 'Si,S,N', 'Se,Si,N', 'R,', 'F,L', 'L,C,S',\n",
+       "       'A,R,I', 'D,S,N', 'A,R,D', 'O,A', 'AA,L', 'Si,S(B)', 'Se,D',\n",
+       "       'Se,A,S', 'A+,S,I', 'N,D,S', 'S,a,D', 'Se,S,A', 'R,Si,A', 'AA,Si',\n",
+       "       'aa', 'aa,L', 'A,L,S', 'a,PV', 'I,aa', 'I,Se,a,S', 'R,Se,N'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df"
+    "df.labels.unique()"
    ]
   },
   {
