--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -93,38 +93,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>00:00:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>00:00:02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4</td>\n",
-       "      <td>00:00:04</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>6</td>\n",
-       "      <td>00:00:06</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>8</td>\n",
        "      <td>00:00:08</td>\n",
@@ -141,78 +109,6 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>12</td>\n",
-       "      <td>00:00:12</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>14</td>\n",
-       "      <td>00:00:14</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>16</td>\n",
-       "      <td>00:00:16</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>18</td>\n",
-       "      <td>00:00:18</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>20</td>\n",
-       "      <td>00:00:20</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>22</td>\n",
-       "      <td>00:00:22</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>24</td>\n",
-       "      <td>00:00:24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>26</td>\n",
-       "      <td>00:00:26</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>28</td>\n",
-       "      <td>00:00:28</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>30</td>\n",
        "      <td>00:00:30</td>\n",
@@ -221,446 +117,64 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>32</td>\n",
-       "      <td>00:00:32</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>34</td>\n",
-       "      <td>00:00:34</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>36</td>\n",
-       "      <td>00:00:36</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>38</td>\n",
-       "      <td>00:00:38</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>40</td>\n",
-       "      <td>00:00:40</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>42</td>\n",
-       "      <td>00:00:42</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>44</td>\n",
-       "      <td>00:00:44</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>46</td>\n",
-       "      <td>00:00:46</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>48</td>\n",
-       "      <td>00:00:48</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>50</td>\n",
-       "      <td>00:00:50</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>52</td>\n",
-       "      <td>00:00:52</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>54</td>\n",
-       "      <td>00:00:54</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>56</td>\n",
-       "      <td>00:00:56</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>58</td>\n",
-       "      <td>00:00:58</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50244</th>\n",
-       "      <td>2450</td>\n",
-       "      <td>00:40:50</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50245</th>\n",
-       "      <td>2452</td>\n",
-       "      <td>00:40:52</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50246</th>\n",
-       "      <td>2454</td>\n",
-       "      <td>00:40:54</td>\n",
-       "      <td>S,O</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50247</th>\n",
-       "      <td>2456</td>\n",
-       "      <td>00:40:56</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50248</th>\n",
-       "      <td>2458</td>\n",
-       "      <td>00:40:58</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50249</th>\n",
-       "      <td>2460</td>\n",
-       "      <td>00:41:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50250</th>\n",
-       "      <td>2462</td>\n",
-       "      <td>00:41:02</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50251</th>\n",
-       "      <td>2464</td>\n",
-       "      <td>00:41:04</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50252</th>\n",
-       "      <td>2466</td>\n",
-       "      <td>00:41:06</td>\n",
-       "      <td>Si</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50253</th>\n",
-       "      <td>2468</td>\n",
-       "      <td>00:41:08</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50254</th>\n",
-       "      <td>2470</td>\n",
-       "      <td>00:41:10</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50255</th>\n",
-       "      <td>2472</td>\n",
-       "      <td>00:41:12</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50256</th>\n",
-       "      <td>2474</td>\n",
-       "      <td>00:41:14</td>\n",
-       "      <td>R</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50257</th>\n",
-       "      <td>2476</td>\n",
-       "      <td>00:41:16</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50258</th>\n",
-       "      <td>2478</td>\n",
-       "      <td>00:41:18</td>\n",
-       "      <td>S,A</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50259</th>\n",
-       "      <td>2480</td>\n",
-       "      <td>00:41:20</td>\n",
-       "      <td>A,Se</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50260</th>\n",
-       "      <td>2482</td>\n",
-       "      <td>00:41:22</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50261</th>\n",
-       "      <td>2484</td>\n",
-       "      <td>00:41:24</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50262</th>\n",
-       "      <td>2486</td>\n",
-       "      <td>00:41:26</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50263</th>\n",
-       "      <td>2488</td>\n",
-       "      <td>00:41:28</td>\n",
-       "      <td>S</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50264</th>\n",
-       "      <td>2490</td>\n",
-       "      <td>00:41:30</td>\n",
-       "      <td>S,A</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50265</th>\n",
-       "      <td>2492</td>\n",
-       "      <td>00:41:32</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50266</th>\n",
-       "      <td>2494</td>\n",
-       "      <td>00:41:34</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50267</th>\n",
-       "      <td>2496</td>\n",
-       "      <td>00:41:36</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50268</th>\n",
-       "      <td>2498</td>\n",
-       "      <td>00:41:38</td>\n",
-       "      <td>D</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50269</th>\n",
-       "      <td>2500</td>\n",
-       "      <td>00:41:40</td>\n",
-       "      <td>S</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50270</th>\n",
-       "      <td>2502</td>\n",
-       "      <td>00:41:42</td>\n",
+       "      <th>55</th>\n",
+       "      <td>110</td>\n",
+       "      <td>00:01:50</td>\n",
        "      <td>L</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50271</th>\n",
-       "      <td>2504</td>\n",
-       "      <td>00:41:44</td>\n",
-       "      <td>D</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50272</th>\n",
-       "      <td>2506</td>\n",
-       "      <td>00:41:46</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50273</th>\n",
-       "      <td>2508</td>\n",
-       "      <td>00:41:48</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>38</td>\n",
-       "      <td>8</td>\n",
+       "      <th>63</th>\n",
+       "      <td>126</td>\n",
+       "      <td>00:02:06</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>50274 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       time_s time_min_sec labels  subject  trick\n",
-       "0           0     00:00:00    NaN        1      1\n",
-       "1           2     00:00:02    NaN        1      1\n",
-       "2           4     00:00:04    NaN        1      1\n",
-       "3           6     00:00:06    NaN        1      1\n",
-       "4           8     00:00:08     Se        1      1\n",
-       "5          10     00:00:10      B        1      1\n",
-       "6          12     00:00:12    NaN        1      1\n",
-       "7          14     00:00:14    NaN        1      1\n",
-       "8          16     00:00:16    NaN        1      1\n",
-       "9          18     00:00:18    NaN        1      1\n",
-       "10         20     00:00:20    NaN        1      1\n",
-       "11         22     00:00:22    NaN        1      1\n",
-       "12         24     00:00:24    NaN        1      1\n",
-       "13         26     00:00:26    NaN        1      1\n",
-       "14         28     00:00:28    NaN        1      1\n",
-       "15         30     00:00:30     In        1      1\n",
-       "16         32     00:00:32    NaN        1      1\n",
-       "17         34     00:00:34    NaN        1      1\n",
-       "18         36     00:00:36    NaN        1      1\n",
-       "19         38     00:00:38    NaN        1      1\n",
-       "20         40     00:00:40    NaN        1      1\n",
-       "21         42     00:00:42    NaN        1      1\n",
-       "22         44     00:00:44    NaN        1      1\n",
-       "23         46     00:00:46    NaN        1      1\n",
-       "24         48     00:00:48    NaN        1      1\n",
-       "25         50     00:00:50    NaN        1      1\n",
-       "26         52     00:00:52    NaN        1      1\n",
-       "27         54     00:00:54    NaN        1      1\n",
-       "28         56     00:00:56    NaN        1      1\n",
-       "29         58     00:00:58    NaN        1      1\n",
-       "...       ...          ...    ...      ...    ...\n",
-       "50244    2450     00:40:50    NaN       38      8\n",
-       "50245    2452     00:40:52    NaN       38      8\n",
-       "50246    2454     00:40:54    S,O       38      8\n",
-       "50247    2456     00:40:56    NaN       38      8\n",
-       "50248    2458     00:40:58    NaN       38      8\n",
-       "50249    2460     00:41:00    NaN       38      8\n",
-       "50250    2462     00:41:02    NaN       38      8\n",
-       "50251    2464     00:41:04    NaN       38      8\n",
-       "50252    2466     00:41:06     Si       38      8\n",
-       "50253    2468     00:41:08    NaN       38      8\n",
-       "50254    2470     00:41:10    NaN       38      8\n",
-       "50255    2472     00:41:12    NaN       38      8\n",
-       "50256    2474     00:41:14      R       38      8\n",
-       "50257    2476     00:41:16    NaN       38      8\n",
-       "50258    2478     00:41:18    S,A       38      8\n",
-       "50259    2480     00:41:20   A,Se       38      8\n",
-       "50260    2482     00:41:22    NaN       38      8\n",
-       "50261    2484     00:41:24    NaN       38      8\n",
-       "50262    2486     00:41:26    NaN       38      8\n",
-       "50263    2488     00:41:28      S       38      8\n",
-       "50264    2490     00:41:30    S,A       38      8\n",
-       "50265    2492     00:41:32    NaN       38      8\n",
-       "50266    2494     00:41:34    NaN       38      8\n",
-       "50267    2496     00:41:36    NaN       38      8\n",
-       "50268    2498     00:41:38      D       38      8\n",
-       "50269    2500     00:41:40      S       38      8\n",
-       "50270    2502     00:41:42      L       38      8\n",
-       "50271    2504     00:41:44      D       38      8\n",
-       "50272    2506     00:41:46    NaN       38      8\n",
-       "50273    2508     00:41:48    NaN       38      8\n",
-       "\n",
-       "[50274 rows x 5 columns]"
+       "    time_s time_min_sec labels  subject  trick\n",
+       "4        8     00:00:08     Se        1      1\n",
+       "5       10     00:00:10      B        1      1\n",
+       "15      30     00:00:30     In        1      1\n",
+       "55     110     00:01:50      L        1      1\n",
+       "63     126     00:02:06      B        1      1"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_ = df.loc[df['labels']!=df.labels.unique()[0]]\n",
-    "df_"
+    "df_ = df.loc[~pd.isna(df['labels'])]\n",
+    "df_.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
