--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -257,10 +257,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Se', 'B', 'In', 'L', 'I', ' S', 'S', 'A', 'PERD.VIS', 'AA', 'R',\n",
+       "       'P', 'C', 'D', 'Si', ' R', 'M', 'F', ' F', 'A+', 'O', ' A',\n",
+       "       'PERD. VIS', 'A0', ' A+', 'P ', ' P', 'iN', ' L ', ' Si', 'PV',\n",
+       "       'N', 'a', 'perd.vis', ' C', ' D', ' B', ' Se', ' VP', 'VP', ' I',\n",
+       "       ' ', ' PV', ' L', 'H', 'DD', ' AA', 'T', ' a', ' N', ' O', 'AA+',\n",
+       "       'SN', 'se', 'F ', 'S ', 'IN', 'PV ', 'SS', 'F  ', 'L ', ' I ',\n",
+       "       'M  ', ' S   ', 'N  ', 'I.A', 'sI', 'a?', 'N. S', 'N ', ' F ',\n",
+       "       ' In', 'VP ', ' L   ', 'S  ', ' A (ANTES)', 'TONTO BOCA P', 'L  ',\n",
+       "       '  ', ' A0', ' S ', 'C ', 'X', ' C ', '  L', ' R ', ' A ', 'L?D',\n",
+       "       'A+.S', 'F?', '', 'S(B)', 'aa'], dtype=object)"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_actions.labels.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Se', 'B', 'In', 'L', 'I', 'S', 'A', 'PV', 'AA', 'R', 'P', 'C',\n",
+       "       'D', 'Si', 'M', 'F', 'A+', 'O', 'A0', 'P ', ' P', ' Si', 'N', 'a',\n",
+       "       ' ', 'H', 'DD', 'T', 'AA+', 'SN', 'se', 'SS', 'M  ', 'I.A', 'sI',\n",
+       "       'a?', 'N. S', 'VP ', ' A (ANTES)', 'TONTO BOCA P', '  ', 'X',\n",
+       "       '  L', 'L?D', 'A+.S', 'F?', '', 'S(B)', 'aa'], dtype=object)"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_actions['labels'] = df_actions['labels'].replace([' Se'], ['Se'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' A'], ['A'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' A '], ['A'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' B'], ['B'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' I'], ['I'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' L'], ['L'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['L  '], ['L'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' L '], ['L'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['L '], ['L'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['N '], ['N'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['N  '], ['N'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' N'], ['N'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' S'], ['S'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' S  '], ['S'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' S   '], ['S'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['S '], ['S'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' S '], ['S'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['S  '], ['S'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['R '], ['R'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' R'], ['R'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' R '], ['R'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['C '], ['C'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' C '], ['C'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' C'], ['C'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['F '], ['F'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' F '], ['F'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['F  '], ['F'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' F'], ['F'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['M '], ['M'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['a '], ['a'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' a'], ['a'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' AA'], ['AA'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' A0'], ['A0'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['IN'], ['In'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' In'], ['In'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['iN'], ['In'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' D'], ['D'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' O'], ['O'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' A+'], ['A+'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' L   '], ['L'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' I '], ['I'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['PERD.VIS'], ['PV'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['PERD. VIS'], ['PV'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['perd.vis'], ['PV'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['VP'], ['PV'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' VP'], ['PV'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['PV '], ['PV'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' PV'], ['PV'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['P '], ['P'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' P'], ['P'])\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "df_actions.labels.unique()"
+   ]
   },
   {
    "cell_type": "code",
