--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -306,11 +306,13 @@
    ],
    "source": [
     "df_actions['labels'] = df_actions['labels'].replace([' Se'], ['Se'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['se'], ['Se'])\n",
     "df_actions['labels'] = df_actions['labels'].replace([' A'], ['A'])\n",
     "df_actions['labels'] = df_actions['labels'].replace([' A '], ['A'])\n",
     "df_actions['labels'] = df_actions['labels'].replace([' B'], ['B'])\n",
     "df_actions['labels'] = df_actions['labels'].replace([' I'], ['I'])\n",
     "df_actions['labels'] = df_actions['labels'].replace([' L'], ['L'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['  L'], ['L'])\n",
     "df_actions['labels'] = df_actions['labels'].replace(['L  '], ['L'])\n",
     "df_actions['labels'] = df_actions['labels'].replace([' L '], ['L'])\n",
     "df_actions['labels'] = df_actions['labels'].replace(['L '], ['L'])\n",
@@ -355,6 +357,8 @@
     "df_actions['labels'] = df_actions['labels'].replace([' PV'], ['PV'])\n",
     "df_actions['labels'] = df_actions['labels'].replace(['P '], ['P'])\n",
     "df_actions['labels'] = df_actions['labels'].replace([' P'], ['P'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' Si'], ['Si'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['sI'], ['Si'])\n",
     "\n",
     "\n",
     "\n",
