--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -286,20 +286,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array(['Se', 'B', 'In', 'L', 'I', 'S', 'A', 'PV', 'AA', 'R', 'P', 'C',\n",
-       "       'D', 'Si', 'M', 'F', 'A+', 'O', 'A0', 'N', 'a', ' ', 'H', 'DD',\n",
-       "       'T', 'AA+', 'SN', 'SS', 'M  ', 'I.A', 'a?', 'N. S', 'VP ',\n",
-       "       ' A (ANTES)', 'TONTO BOCA P', '  ', 'X', 'L?D', 'A+.S', 'F?', '',\n",
-       "       'S(B)', 'aa'], dtype=object)"
+       "       'D', 'Si', 'M', 'F', 'A+', 'O', 'A0', 'N', 'a', ' ', 'H', 'T',\n",
+       "       'AA+', 'SN', 'I.A', 'N. S', 'TONTO BOCA P', '  ', 'X', 'L?D',\n",
+       "       'A+.S', '', 'S(B)', 'aa'], dtype=object)"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,6 +362,10 @@
     "df_actions['labels'] = df_actions['labels'].replace(['sI'], ['Si'])\n",
     "df_actions['labels'] = df_actions['labels'].replace(['SS'], ['S'])\n",
     "df_actions['labels'] = df_actions['labels'].replace(['DD'], ['D'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['a?'], ['a'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace(['F?'], ['F'])\n",
+    "df_actions['labels'] = df_actions['labels'].replace([' A (ANTES)'], ['A'])\n",
+    "\n",
     "\n",
     "\n",
     "df_actions.labels.unique()"
@@ -370,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -403,12 +406,92 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>12597</th>\n",
-       "      <td>1920</td>\n",
-       "      <td>00:32:00</td>\n",
-       "      <td>L?D</td>\n",
-       "      <td>38</td>\n",
-       "      <td>7</td>\n",
+       "      <th>1060</th>\n",
+       "      <td>376</td>\n",
+       "      <td>00:06:16</td>\n",
+       "      <td></td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5850</th>\n",
+       "      <td>744</td>\n",
+       "      <td>00:12:24</td>\n",
+       "      <td></td>\n",
+       "      <td>36</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6308</th>\n",
+       "      <td>752</td>\n",
+       "      <td>00:12:32</td>\n",
+       "      <td></td>\n",
+       "      <td>14</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6610</th>\n",
+       "      <td>784</td>\n",
+       "      <td>00:13:04</td>\n",
+       "      <td></td>\n",
+       "      <td>21</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6749</th>\n",
+       "      <td>900</td>\n",
+       "      <td>00:15:00</td>\n",
+       "      <td></td>\n",
+       "      <td>24</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9310</th>\n",
+       "      <td>1546</td>\n",
+       "      <td>00:25:46</td>\n",
+       "      <td></td>\n",
+       "      <td>8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9684</th>\n",
+       "      <td>1310</td>\n",
+       "      <td>00:21:50</td>\n",
+       "      <td></td>\n",
+       "      <td>12</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11034</th>\n",
+       "      <td>1708</td>\n",
+       "      <td>00:28:28</td>\n",
+       "      <td></td>\n",
+       "      <td>26</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11151</th>\n",
+       "      <td>1732</td>\n",
+       "      <td>00:28:52</td>\n",
+       "      <td></td>\n",
+       "      <td>27</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11747</th>\n",
+       "      <td>1364</td>\n",
+       "      <td>00:22:44</td>\n",
+       "      <td></td>\n",
+       "      <td>36</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11774</th>\n",
+       "      <td>1646</td>\n",
+       "      <td>00:27:26</td>\n",
+       "      <td></td>\n",
+       "      <td>36</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -416,16 +499,26 @@
       ],
       "text/plain": [
        "       time_s time_min_sec labels  subject  trick\n",
-       "12597    1920     00:32:00    L?D       38      7"
+       "1060      376     00:06:16              24      1\n",
+       "5850      744     00:12:24              36      3\n",
+       "6308      752     00:12:32              14      4\n",
+       "6610      784     00:13:04              21      4\n",
+       "6749      900     00:15:00              24      4\n",
+       "9310     1546     00:25:46               8      6\n",
+       "9684     1310     00:21:50              12      6\n",
+       "11034    1708     00:28:28              26      6\n",
+       "11151    1732     00:28:52              27      6\n",
+       "11747    1364     00:22:44              36      6\n",
+       "11774    1646     00:27:26              36      6"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_actions.loc[df_actions['labels']=='L?D']"
+    "df_actions.loc[df_actions['labels']==' ']"
    ]
   },
   {
