--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,25 +17,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\David\\Anaconda3\\envs\\python3\\lib\\site-packages\\ipykernel_launcher.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\David\\Anaconda3\\envs\\python3\\lib\\site-packages\\ipykernel_launcher.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  if sys.path[0] == '':\n",
-      "C:\\Users\\David\\Anaconda3\\envs\\python3\\lib\\site-packages\\ipykernel_launcher.py:13: SettingWithCopyWarning: \n",
+      "  app.launch_new_instance()\n",
+      "C:\\Users\\David\\Anaconda3\\envs\\python3\\lib\\site-packages\\ipykernel_launcher.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  del sys.path[0]\n"
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     }
    ],
@@ -64,16 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10313"
+       "10308"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14419\n"
+      "14417\n"
      ]
     },
     {
@@ -224,7 +223,7 @@
        "9     156     00:02:36      S        1      1"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -267,15 +266,14 @@
        "       'P', 'C', 'D', 'Si', ' R', 'M', 'F', ' F', 'A+', 'O', ' A',\n",
        "       'PERD. VIS', 'A0', ' A+', 'P ', ' P', 'iN', ' L ', ' Si', 'PV',\n",
        "       'N', 'a', 'perd.vis', ' C', ' D', ' B', ' Se', ' VP', 'VP', ' I',\n",
-       "       ' ', ' PV', ' L', 'H', 'DD', ' AA', 'T', ' a', ' N', ' O', 'AA+',\n",
-       "       'SN', 'se', 'F ', 'S ', 'IN', 'PV ', 'SS', 'F  ', 'L ', ' I ',\n",
-       "       'M  ', ' S   ', 'N  ', 'I.A', 'sI', 'a?', 'N. S', 'N ', ' F ',\n",
-       "       ' In', 'VP ', ' L   ', 'S  ', ' A (ANTES)', 'TONTO BOCA P', 'L  ',\n",
-       "       '  ', ' A0', ' S ', 'C ', 'X', ' C ', '  L', ' R ', ' A ', 'L?D',\n",
-       "       'A+.S', 'F?', '', 'S(B)', 'aa'], dtype=object)"
+       "       ' PV', ' L', 'H', 'DD', ' AA', 'T', ' a', ' N', ' O', 'AA+', 'se',\n",
+       "       'F ', 'S ', 'IN', 'PV ', 'SS', 'F  ', 'L ', ' I ', ' ', 'M  ',\n",
+       "       ' S   ', 'N  ', 'sI', 'a?', 'N ', ' F ', ' In', 'VP ', ' L   ',\n",
+       "       'S  ', ' A (ANTES)', 'TONTO BOCA P', 'L  ', ' A0', ' S ', 'C ',\n",
+       "       'X', ' C ', '  L', ' R ', ' A ', 'F?', 'aa'], dtype=object)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 168,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,24 +284,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array(['Se', 'B', 'In', 'L', 'I', 'S', 'A', 'PV', 'AA', 'R', 'P', 'C',\n",
-       "       'D', 'Si', 'M', 'F', 'A+', 'O', 'A0', 'N', 'a', ' ', 'H', 'T',\n",
-       "       'AA+', 'SN', 'I.A', 'N. S', 'TONTO BOCA P', '  ', 'X', 'L?D',\n",
-       "       'A+.S', '', 'S(B)', 'aa'], dtype=object)"
+       "       'D', 'Si', 'M', 'F', 'A+', 'O', 'A0', 'N', 'a', 'H', 'T', 'AA+',\n",
+       "       ' ', 'TONTO BOCA P', 'X', 'aa'], dtype=object)"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 169,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "### Correccion de fallos en las labels al entrar los datos\n",
     "df_actions['labels'] = df_actions['labels'].replace([' Se'], ['Se'])\n",
     "df_actions['labels'] = df_actions['labels'].replace(['se'], ['Se'])\n",
     "df_actions['labels'] = df_actions['labels'].replace([' A'], ['A'])\n",
@@ -373,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -406,39 +404,67 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1060</th>\n",
-       "      <td>376</td>\n",
-       "      <td>00:06:16</td>\n",
-       "      <td></td>\n",
-       "      <td>24</td>\n",
-       "      <td>1</td>\n",
+       "      <th>9423</th>\n",
+       "      <td>1722</td>\n",
+       "      <td>00:28:42</td>\n",
+       "      <td>TONTO BOCA P</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5850</th>\n",
-       "      <td>744</td>\n",
-       "      <td>00:12:24</td>\n",
-       "      <td></td>\n",
-       "      <td>36</td>\n",
-       "      <td>3</td>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      time_s time_min_sec        labels  subject  trick\n",
+       "9423    1722     00:28:42  TONTO BOCA P        9      6"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_actions.loc[df_actions['labels']=='TONTO BOCA P']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time_s</th>\n",
+       "      <th>time_min_sec</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>trick</th>\n",
        "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
        "    <tr>\n",
-       "      <th>6308</th>\n",
-       "      <td>752</td>\n",
-       "      <td>00:12:32</td>\n",
-       "      <td></td>\n",
-       "      <td>14</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6610</th>\n",
-       "      <td>784</td>\n",
-       "      <td>00:13:04</td>\n",
-       "      <td></td>\n",
-       "      <td>21</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6749</th>\n",
+       "      <th>6746</th>\n",
        "      <td>900</td>\n",
        "      <td>00:15:00</td>\n",
        "      <td></td>\n",
@@ -446,15 +472,7 @@
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9310</th>\n",
-       "      <td>1546</td>\n",
-       "      <td>00:25:46</td>\n",
-       "      <td></td>\n",
-       "      <td>8</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9684</th>\n",
+       "      <th>9682</th>\n",
        "      <td>1310</td>\n",
        "      <td>00:21:50</td>\n",
        "      <td></td>\n",
@@ -462,7 +480,7 @@
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11034</th>\n",
+       "      <th>11031</th>\n",
        "      <td>1708</td>\n",
        "      <td>00:28:28</td>\n",
        "      <td></td>\n",
@@ -470,7 +488,7 @@
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11151</th>\n",
+       "      <th>11148</th>\n",
        "      <td>1732</td>\n",
        "      <td>00:28:52</td>\n",
        "      <td></td>\n",
@@ -478,7 +496,7 @@
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11747</th>\n",
+       "      <th>11744</th>\n",
        "      <td>1364</td>\n",
        "      <td>00:22:44</td>\n",
        "      <td></td>\n",
@@ -486,7 +504,7 @@
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11774</th>\n",
+       "      <th>11771</th>\n",
        "      <td>1646</td>\n",
        "      <td>00:27:26</td>\n",
        "      <td></td>\n",
@@ -499,20 +517,15 @@
       ],
       "text/plain": [
        "       time_s time_min_sec labels  subject  trick\n",
-       "1060      376     00:06:16              24      1\n",
-       "5850      744     00:12:24              36      3\n",
-       "6308      752     00:12:32              14      4\n",
-       "6610      784     00:13:04              21      4\n",
-       "6749      900     00:15:00              24      4\n",
-       "9310     1546     00:25:46               8      6\n",
-       "9684     1310     00:21:50              12      6\n",
-       "11034    1708     00:28:28              26      6\n",
-       "11151    1732     00:28:52              27      6\n",
-       "11747    1364     00:22:44              36      6\n",
-       "11774    1646     00:27:26              36      6"
+       "6746      900     00:15:00              24      4\n",
+       "9682     1310     00:21:50              12      6\n",
+       "11031    1708     00:28:28              26      6\n",
+       "11148    1732     00:28:52              27      6\n",
+       "11744    1364     00:22:44              36      6\n",
+       "11771    1646     00:27:26              36      6"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
