--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -559,6 +559,19 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "### poner a cada acción una relación con los fenómenos del mago según el intervalo en el que ocurre\n",
+    "### poner una duración de la acción? de acuerdo al diccionario\n",
+    "\n",
+    "## Para Sincronizar las anotaciones de Jordi y Luis con las de las estudiantes de master, hay que restar a los tiempos de Jordi \n",
+    "## y Luis 10:31 (10 minutos, 31 segundos) (sincronización de ambos videos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
