--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -569,10 +569,173 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_gea=pd.read_excel(os.getcwd() + '\\\\EVENTOS_GEA.xlsx', sheet_name='Hoja2' )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tiempo</th>\n",
+       "      <th>evento</th>\n",
+       "      <th>decripcion</th>\n",
+       "      <th>times_s</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>00:10:58</td>\n",
+       "      <td>gag</td>\n",
+       "      <td>broma sobre su dominio del catalán</td>\n",
+       "      <td>658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>00:11:05</td>\n",
+       "      <td>gag</td>\n",
+       "      <td>\"Por deferencia\"</td>\n",
+       "      <td>665</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>00:11:36</td>\n",
+       "      <td>gag</td>\n",
+       "      <td>\"Que haya público\"</td>\n",
+       "      <td>696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>00:11:50</td>\n",
+       "      <td>gag</td>\n",
+       "      <td>\"El público de schroedinger\"</td>\n",
+       "      <td>710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00:12:02</td>\n",
+       "      <td>gag</td>\n",
+       "      <td>El juego es muy bonito</td>\n",
+       "      <td>722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>00:12:30</td>\n",
+       "      <td>gag</td>\n",
+       "      <td>No hay humor, la gente se cambia de sitio</td>\n",
+       "      <td>750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>00:12:53</td>\n",
+       "      <td>gag</td>\n",
+       "      <td>Broma: \"Ah! No se puede cambiar\"</td>\n",
+       "      <td>773</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>00:13:01</td>\n",
+       "      <td>gag</td>\n",
+       "      <td>\"Como veis soy una persona…\"</td>\n",
+       "      <td>781</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>00:13:19</td>\n",
+       "      <td>gag</td>\n",
+       "      <td>\"Preocupado por el ritmo…\"</td>\n",
+       "      <td>799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>00:13:44</td>\n",
+       "      <td>gag</td>\n",
+       "      <td>\"Risas del público\"</td>\n",
+       "      <td>824</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     tiempo evento                                 decripcion  times_s\n",
+       "0  00:10:58    gag         broma sobre su dominio del catalán      658\n",
+       "1  00:11:05    gag                           \"Por deferencia\"      665\n",
+       "2  00:11:36    gag                         \"Que haya público\"      696\n",
+       "3  00:11:50    gag               \"El público de schroedinger\"      710\n",
+       "4  00:12:02    gag                     El juego es muy bonito      722\n",
+       "5  00:12:30    gag  No hay humor, la gente se cambia de sitio      750\n",
+       "6  00:12:53    gag           Broma: \"Ah! No se puede cambiar\"      773\n",
+       "7  00:13:01    gag               \"Como veis soy una persona…\"      781\n",
+       "8  00:13:19    gag                 \"Preocupado por el ritmo…\"      799\n",
+       "9  00:13:44    gag                        \"Risas del público\"      824"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "times_s = [df_gea.tiempo.iloc[i].minute*60 + df_gea.tiempo.iloc[i].second for i in range(len(df_gea))]\n",
+    "df_gea['times_s'] = times_s\n",
+    "df_gea.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "799"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n.second"
+   ]
   }
  ],
  "metadata": {
