--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -64,33 +64,171 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-57451b713de1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m### Quitar los momentos en que no hay eventos! (Nans fuera)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdf_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m~\u001b[0m\u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0misna\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'labels'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mdf_\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf_\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "10302"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "### Quitar los momentos en que no hay eventos! (Nans fuera)\n",
-    "df_ = Df.loc[~pd.isna(df['labels'])]\n",
+    "df_ = Df.loc[~pd.isna(Df['labels'])]\n",
     "df_.head()\n",
     "len(df_) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14411\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time_s</th>\n",
+       "      <th>time_min_sec</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>trick</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>00:00:08</td>\n",
+       "      <td>Se</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>00:00:10</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30</td>\n",
+       "      <td>00:00:30</td>\n",
+       "      <td>In</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>110</td>\n",
+       "      <td>00:01:50</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>126</td>\n",
+       "      <td>00:02:06</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>132</td>\n",
+       "      <td>00:02:12</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>140</td>\n",
+       "      <td>00:02:20</td>\n",
+       "      <td>I</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>140</td>\n",
+       "      <td>00:02:20</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>146</td>\n",
+       "      <td>00:02:26</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>156</td>\n",
+       "      <td>00:02:36</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   time_s time_min_sec labels  subject  trick\n",
+       "0       8     00:00:08     Se        1      1\n",
+       "1      10     00:00:10      B        1      1\n",
+       "2      30     00:00:30     In        1      1\n",
+       "3     110     00:01:50      L        1      1\n",
+       "4     126     00:02:06      B        1      1\n",
+       "5     132     00:02:12      L        1      1\n",
+       "6     140     00:02:20      I        1      1\n",
+       "7     140     00:02:20      S        1      1\n",
+       "8     146     00:02:26      L        1      1\n",
+       "9     156     00:02:36      S        1      1"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Como en ocasiones hay más de una acción en un mismo tiempo, hacer que en la columna label no haya comas\n",
     "## En el caso que coocurran acciones, \"multiplicar la linea\", una para cada evento\n",
@@ -119,18 +257,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Se', 'B', 'In', 'L', 'I', ' S', 'S', 'A', 'PERD.VIS', 'AA', 'R',\n",
+       "       'P', 'C', 'D', 'Si', ' R', 'M', 'F', ' F', 'A+', 'O', ' A',\n",
+       "       'PERD. VIS', 'A0', ' A+', 'P ', ' P', 'iN', ' L ', ' Si', 'PV',\n",
+       "       'N', 'a', 'perd.vis', ' C', ' D', ' B', ' Se', ' VP', 'VP', ' I',\n",
+       "       ' PV', ' L', 'H', 'DD', ' AA', 'T', ' a', ' N', ' O', 'AA+', 'se',\n",
+       "       'F ', 'S ', 'IN', 'PV ', 'SS', 'F  ', 'L ', ' I ', 'M  ', ' S   ',\n",
+       "       'N  ', 'sI', 'a?', 'N ', ' F ', ' In', 'VP ', ' L   ', 'S  ',\n",
+       "       ' A (ANTES)', 'TONTO BOCA P', 'L  ', ' A0', ' S ', 'C ', 'X',\n",
+       "       ' C ', '  L', ' R ', ' A ', 'F?', 'aa'], dtype=object)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df_actions.labels.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Se', 'B', 'In', 'L', 'I', 'S', 'A', 'PV', 'AA', 'R', 'P', 'C',\n",
+       "       'D', 'Si', 'M', 'F', 'A+', 'O', 'A0', 'N', 'a', 'H', 'T', 'AA+',\n",
+       "       'TONTO BOCA P', 'X', 'aa'], dtype=object)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### Correccion de fallos en las labels al entrar los datos\n",
     "df_actions['labels'] = df_actions['labels'].replace([' Se'], ['Se'])\n",
@@ -209,9 +379,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Se', 'B', 'In', 'L', 'I', 'S', 'A', 'AA', 'R', 'C', 'D', 'Si',\n",
+       "       'M', 'F', 'A+', 'O', 'A0', 'N', 'a'], dtype=object)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = df_actions.loc[(df_actions['labels']=='Se') | (df_actions['labels']=='B') | (df_actions['labels']=='In') | \n",
     "              (df_actions['labels']=='L') | (df_actions['labels']=='I') | (df_actions['labels']=='S') | \n",
@@ -226,9 +408,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14015\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time_s</th>\n",
+       "      <th>time_min_sec</th>\n",
+       "      <th>labels</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>trick</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>8</td>\n",
+       "      <td>00:00:08</td>\n",
+       "      <td>Se</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10</td>\n",
+       "      <td>00:00:10</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>30</td>\n",
+       "      <td>00:00:30</td>\n",
+       "      <td>In</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>110</td>\n",
+       "      <td>00:01:50</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>126</td>\n",
+       "      <td>00:02:06</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>132</td>\n",
+       "      <td>00:02:12</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>140</td>\n",
+       "      <td>00:02:20</td>\n",
+       "      <td>I</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>140</td>\n",
+       "      <td>00:02:20</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>146</td>\n",
+       "      <td>00:02:26</td>\n",
+       "      <td>L</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>156</td>\n",
+       "      <td>00:02:36</td>\n",
+       "      <td>S</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   time_s time_min_sec labels  subject  trick\n",
+       "0       8     00:00:08     Se        1      1\n",
+       "1      10     00:00:10      B        1      1\n",
+       "2      30     00:00:30     In        1      1\n",
+       "3     110     00:01:50      L        1      1\n",
+       "4     126     00:02:06      B        1      1\n",
+       "5     132     00:02:12      L        1      1\n",
+       "6     140     00:02:20      I        1      1\n",
+       "7     140     00:02:20      S        1      1\n",
+       "8     146     00:02:26      L        1      1\n",
+       "9     156     00:02:36      S        1      1"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(len(df))\n",
     "df.head(10)"
@@ -500,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,19 +830,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "event_associated=[]\n",
     "\n",
-    "for i in range(len(df)):\n",
+    "for i in range(10): #len(df)\n",
     "    time_label = df.time_s.iloc[i]\n",
-    "    time_previous_event = df_gea.loc[df_gea['times_s'] < time_label ].iloc[-1].time_s\n",
-    "    previous_event = df_gea.loc[df_gea['times_s'] < time_label ].iloc[-1].evento\n",
-    "    if time_previous_event + window\n",
+    "    if time_label<df_gea['times_s'].iloc[0]:\n",
+    "        event_associated.append('undetermined')\n",
+    "    else:\n",
+    "        time_previous_event = df_gea.loc[df_gea['times_s'] < time_label ].iloc[-1].times_s\n",
+    "        previous_event = df_gea.loc[df_gea['times_s'] < time_label ].iloc[-1].evento\n",
+    "        if (time_previous_event + window) >= time_label:\n",
+    "            event_associated.append(previous_event)\n",
+    "        else:\n",
+    "            event_associated.append('undetermined')\n",
+    "            \n",
+    "            \n",
+    "            \n",
+    "\n",
     "    \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['undetermined',\n",
+       " 'undetermined',\n",
+       " 'gag',\n",
+       " 'undetermined',\n",
+       " 'undetermined',\n",
+       " 'undetermined',\n",
+       " 'undetermined',\n",
+       " 'undetermined',\n",
+       " 'undetermined',\n",
+       " 'undetermined']"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "event_associated"
    ]
   },
   {
