--- a/process_df.ipynb
+++ b/process_df.ipynb
@@ -830,13 +830,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "event_associated=[]\n",
     "\n",
-    "for i in range(10): #len(df)\n",
+    "for i in range(len(df)): #len(df)\n",
     "    time_label = df.time_s.iloc[i]\n",
     "    if time_label<df_gea['times_s'].iloc[0]:\n",
     "        event_associated.append('undetermined')\n",
@@ -850,39 +850,32 @@
     "            \n",
     "            \n",
     "            \n",
-    "\n",
-    "    \n",
+    "df['event_associated']=event_associated    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['undetermined',\n",
-       " 'undetermined',\n",
-       " 'gag',\n",
-       " 'undetermined',\n",
-       " 'undetermined',\n",
-       " 'undetermined',\n",
-       " 'undetermined',\n",
-       " 'undetermined',\n",
-       " 'undetermined',\n",
-       " 'undetermined']"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "event_associated"
+    "df.head(20)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
